--- a/front-end/src/components/topbar/topbar.css
+++ b/front-end/src/components/topbar/topbar.css
@@ -1,11 +1,12 @@
 .topbarContainer{
     height: 50px;
     width: 100%;
-    background-color: #1877f2;
+    background-color: #5D54A4;
     display: flex;
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 1000;
 }
 .topbarLeft{
     flex: 3.5;
@@ -84,4 +85,50 @@
     height: 32px;
     border-radius: 50%;
     object-fit: cover;
+    cursor: pointer;
+}
+.dropdownContent {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 50px;
+    right: 50px !important;
+    border-radius: 10px;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 300px;
+    max-width: 500px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.dropdownContentItem{
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+.dropdownContentItemLink{
+    cursor: pointer;
+    color: inherit ; 
+    text-decoration: none ;
+}
+.linkIcon{
+    margin-right:15px;
+}
+
+.dropdownContent a {
+    color: black;
+    margin: 10px 10px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdownContent a:hover {
+    background-color: #cbcbcb;
+}
+.moreIcon{
+    margin-left: auto;
+}
+.dropdownHr{
+    margin: 0 16px;
 }
