--- a/front-end/src/components/article/article.css
+++ b/front-end/src/components/article/article.css
@@ -43,17 +43,19 @@
     display: flex;
     margin-left: 20px;
 }
-.articleOption{
+.fileInput{
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-right: 15px;
-    cursor: pointer;
 }
 .articleIcon{
+    cursor: pointer;
     font-size: 18px;
-    margin-right: 3px;
+    margin-right: 5px;
 }
 .articleOptionText{
+    cursor: pointer;
     font-size: 14px;
     font-weight: 500;
 }
@@ -107,6 +109,7 @@
 
 .fileLink {
     display: inline-block;
+    max-width: 200px;
     margin: 10px;
     padding: 8px 12px;
     background-color: #f0f0f0;
@@ -114,6 +117,9 @@
     font-weight: 500;
     border-radius: 2px; 
     text-decoration: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .fileLink:hover {
@@ -123,8 +129,8 @@
 
 .photoName {
     font-size: 14px;
-    margin-top: 5px; /* Add space between the image and the file name */
-    text-align: center; /* Center the file name */
+    margin-top: 5px; 
+    text-align: center;
 }
 .removeButton{
     border: none;
@@ -135,4 +141,8 @@
 .removeButton:hover{
     border: solid 1px black;
     border-radius: 2px;
+}
+.dateSection {
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
