--- a/front-end/src/components/submission/submission.css
+++ b/front-end/src/components/submission/submission.css
@@ -1,4 +1,4 @@
-.post{
+.submission{
     width: 100%;
     border-radius: 10px;
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
@@ -6,48 +6,48 @@
     -moz-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
     margin: 30px 0;
 }
-.postWrapper{
+.submissionWrapper{
     padding: 10px;
 }
-.postTop{
+.submissionTop{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.postTopLeft{
+.submissionTopLeft{
     display: flex;
     align-items: center;
 
 }
-.postProfileImg{
+.submissionProfileImg{
     width: 32px;
     height: 32px;
     border-radius: 50%;
     object-fit: cover;
 }
-.postUsername{
+.submissionUsername{
     font-size: 15px;
     font-weight: 500;
     margin: 0 10px;
 }
-.postDate{
+.submissionDate{
     font-size: 12px;
 }
-.postCenter{
+.submissionCenter{
     margin: 20px 0;
 
 }
-.postCenter {
+.submissionCenter {
     display: flex;
     flex-wrap: wrap;
 }
 
-.postCenter {
+.submissionCenter {
     display: flex;
     flex-wrap: wrap;
 }
 
-.postImg {
+.submissionImg {
     max-width: calc(50% - 5px); /* Adjust the width as needed */
     margin-bottom: 5px;
     border-radius: 5px;
@@ -55,7 +55,7 @@
     cursor: pointer;
 }
 
-.postImgGroup {
+.submissionImgGroup {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -63,12 +63,12 @@
     position: relative;
 }
 
-.postImgTop {
+.submissionImgTop {
     width: 100%;
     max-width: 100%;
 }
 
-.postImgBottom {
+.submissionImgBottom {
     max-width: calc(50% - 5px);
     margin-bottom: 5px;
     border-radius: 5px;
@@ -76,55 +76,55 @@
 }
 
 
-.postBottom{
+.submissionBottom{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.postBottomLeft{
+.submissionBottomLeft{
     display: flex;
     align-items: center;
 }
-.postIcon{
+.submissionIcon{
     width: 24px;
     height: 24px;
     margin-right: 5px;
     cursor: pointer;
 }
 
-.postLikeCounter{
+.submissionLikeCounter{
     font-size: 15px;
     margin-right: 5px;
 }
-.postBottomRight{
+.submissionBottomRight{
     display: flex;
     align-items: center;
 }
-.postCommentText{
+.submissionCommentText{
     cursor: pointer;
     font-size: 15px;
 
 }
-.postIcon.liked {
+.submissionIcon.liked {
     color: blue; /* Change to the desired color */
 }
 
-.postIcon.disliked {
+.submissionIcon.disliked {
     color: red; /* Change to the desired color */
 }
 
-.postCenter{
+.submissionCenter{
     margin: 20px 0;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.postTitle {
+.submissionTitle {
     margin-bottom: 10px; 
 }
 
-.postContent{
+.submissionContent{
     margin-bottom: 20px; 
 }
 
@@ -173,4 +173,71 @@
     width: 100%;
     color: white;
     border-radius: 5px;
+}
+.submissionDropdownContent {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: calc(100% + 0px);
+    right: 0 !important;
+    border-radius: 10px;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.submissionDropdownContentItem{
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.submissionDropdownContent a{
+    color: inherit;
+    text-decoration: none;
+}
+.submissionDropdownContentItem:hover {
+    background-color: #cbcbcb;
+}
+.submissionDropdownContentItemLink{
+    cursor: pointer;
+    color: inherit ; 
+    text-decoration: none ;
+}
+.submissionTopRight {
+    position: relative;
+    z-index: 900;
+}
+.moreIcon{
+    cursor: pointer;
+}
+.commentSection form {
+    display: flex;
+    flex-direction: column;
+}
+.commentSection textarea {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    max-width:100%;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.commentSection button {
+    width: 100px;
+    padding: 8px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.commentSection button:hover {
+    background-color: #0056b3;
 }
