--- a/front-end/src/components/article/article.css
+++ b/front-end/src/components/article/article.css
@@ -1,43 +1,41 @@
 .article{
     width: 100%;
     min-height: 170px;
-    border-radius: 10px;
+}
+.articleWrapper{
+    padding: 50px;
+    padding-right: 100px;
+}
+.articleContent{
+    display: block;
+    align-items: center;
+    padding: 30px;
+    margin-bottom: 20px;
     box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
     -moz-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
 }
-.articleWrapper{
-    padding: 20px;
-
-}
-.articleTop{
-    display: flex;
-    align-items: center;
-}
-.articleProfilePicture{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
+.articleTitle{
+    width: 100%;
+    height: 30px;
+    margin-bottom: 20px;
 }
 .articleInput{
-    border: none;
-    resize: vertical; 
-    width: 85%;
-    min-height: 50px; 
-    max-height: 150px; 
-}
-.articleInput:focus{
-    outline: none;
+    width: 100%;
+    height: 300px;
 }
 .articleHr{
-    margin: 20px;
+    margin: 20px 0;
 }
 .articleBottom{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+    -webkit-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+    -moz-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
 }
 .articleOptions{
     display: flex;
@@ -54,18 +52,19 @@
     font-size: 18px;
     margin-right: 5px;
 }
-.articleOptionText{
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 500;
+.buttonContainer{
+    display: flex;
+    align-items: center;
+    justify-content: end;
 }
 .articleButton{
     border: none;
     padding: 7px;
     border-radius: 5px;
-    background-color: green;
+    width: 100px;
+    height: 30px;
+    background-color: rgb(148, 147, 147);
     font-weight: 500;
-    margin-right: 20px;
     cursor: pointer;
     color: white;
 }
@@ -78,15 +77,15 @@
     
 }
 .selectedItems{
-    margin-left: 20px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    margin: 20px;
+    
 }
 .selectedItems .itemContainer {
     display: flex;
     align-items: center;
     margin-right: 10px;
     background-color: #f0f0f0;
+    border: 1px solid rgb(202, 202, 202);
     border-radius: 2px;
     margin-bottom: 5px;
     height: auto;
@@ -142,7 +141,17 @@
     border: solid 1px black;
     border-radius: 2px;
 }
+.createSubmission{
+    font-weight: 400;
+    margin: 40px 0 10px 0 ;
+}
 .dateSection {
-    margin-left: 20px;
-    margin-bottom: 20px;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+    -webkit-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+    -moz-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+}
+.dateSection p {
+    margin-bottom: 10px;
 }
