--- a/front-end/src/components/topbar/topbar.css
+++ b/front-end/src/components/topbar/topbar.css
@@ -46,8 +46,9 @@
     flex: 3.5;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content:flex-end;
     color: white;
+    margin-right: 20px;
 
 }
 .topbarLink{
@@ -65,6 +66,8 @@
     position: relative;
     color: inherit; 
     text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 .topbarIconBadge{
     width: 15px;
@@ -92,7 +95,7 @@
     flex-direction: column;
     position: absolute;
     top: 50px;
-    right: 50px !important;
+    right: 20px !important;
     border-radius: 10px;
     right: 0;
     background-color: #f9f9f9;
