--- a/front-end/src/components/forms/event/event.css
+++ b/front-end/src/components/forms/event/event.css
@@ -1,13 +1,19 @@
 .dateRangeContainer {
   display: flex;
   flex-direction: column;
-  grid-column: 2;
+  grid-column: span 4;
+  grid-row: 2;
+  cursor: pointer;
+  border: 1px solid rgb(158, 158, 158);
+  padding: 10px;
 }
 
 .dateRangeText {
-  margin-bottom: 10px; /* Adjust the margin as needed */
+  margin-bottom: 10px; 
+
 }
 
 .datePicker {
-  margin-top: 10px; /* Adjust the margin as needed */
+  margin-top: 10px; 
+
 }
