--- a/front-end/src/pages/article/article.css
+++ b/front-end/src/pages/article/article.css
@@ -16,12 +16,12 @@
     -moz-box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
 }
 .articleTitle{
-    width: 100%;
+    width: 100% !important;
     height: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 60px !important; 
 }
 .articleInput{
-    width: 100%;
+    width: 100% !important;
     height: 300px;
 }
 .articleHr{
