--- a/front-end/src/components/notification/notification.css
+++ b/front-end/src/components/notification/notification.css
@@ -13,11 +13,13 @@
     position: relative;
     flex: 0 0 auto;
     margin-right: 15px;
+    width: auto;
+    height: auto;
 }
 
 .user-pic img {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
 }
 .notification-type {
