--- a/front-end/src/components/post/post.css
+++ b/front-end/src/components/post/post.css
@@ -272,6 +272,128 @@
 .commentAction{
     cursor: pointer;
 }
+.replyClick{
+    cursor: pointer;
+    font-size: 12px;
+}
 .actionText{
     padding-left: 5px;
 }
+.modal {
+    position: fixed;
+    padding: 40px 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* ensure modal is above other content */
+}
+
+.modalMainContent{
+    background-color: white;
+    position: relative;
+    padding: 20px 40px;
+    max-width: 800px; 
+    width: 100%;
+    max-height: 80vh; 
+    overflow-y: auto; 
+}
+.modalBottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.modalStickyTop {
+    position: sticky;
+    top: 0;
+    background-color: white; 
+    left: 0;
+    right: 0;
+    z-index: 1000; 
+    width: 100%;
+    border-bottom: 1px solid #ccc; 
+    border-radius: 8px 8px 0 0;
+}
+.modalTop {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 10px;
+}
+
+.modalTopLeft {
+    flex: 1; 
+}
+
+.postUsername {
+    text-align: center; 
+}
+
+.modalTopRight {
+    margin-left: auto; 
+}
+
+.closeButton {
+    cursor: pointer;
+    background: none;
+    border: none;
+    border-radius: 50%;
+    font-size: 1rem; 
+    color: white;
+    background-color: #9b9b9b;
+}
+
+.closeButton:hover {
+    background-color: #7b7b7b;
+}
+
+.modalStickyBottom {
+    position: sticky;
+    bottom: 0;
+    background-color: white;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    border-top: 1px solid #ccc; 
+    border-radius: 0 0 8px 8px;
+    padding: 10px 20px; 
+}
+
+.commentInputWrapper {
+    display: flex;
+    align-items: center;
+}
+
+.userAvatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.commentForm {
+    display: flex;
+    flex: 1; 
+}
+
+.commentInput {
+    flex: 1;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.commentButton {
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px; /* Adjust margin as needed */
+}
+
