--- a/front-end/src/components/post/post.css
+++ b/front-end/src/components/post/post.css
@@ -255,6 +255,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-bottom: 10px;
 }
 .action{
     cursor: pointer;
