--- a/front-end/src/components/post/post.css
+++ b/front-end/src/components/post/post.css
@@ -407,13 +407,12 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: calc(100% - 22%);
-    right: 20px !important;
     border-radius: 5px;
     right: 0;
     background-color: #f9f9f9;
     min-width: 100px;
     box-shadow: 0px 8px 8px 0px rgba(145, 145, 145, 0.2);
+    z-index: 1000;
 }
 .commentDropdownContentItem{
     display: flex;
