--- a/front-end/src/components/feed/feed.css
+++ b/front-end/src/components/feed/feed.css
@@ -5,3 +5,9 @@
 .feedWrapper{
     padding: 20px;
 }
+.filter{
+    border-radius: 30px;
+    padding: 5px;
+    width: 200px;
+    margin-bottom: 10px;
+}
