--- a/front-end/src/pages/authentication/authentication.css
+++ b/front-end/src/pages/authentication/authentication.css
@@ -82,6 +82,10 @@
 	border: none;
 	width: 200px;
 	height: 50px;
+	transition: background-color 0.3s ease; 
+}
+.loginButton :hover {
+    background-color: #999999;
 }
 .loginButtonText{
 	color: black;
